# 3D-Graphics-Rendering-Cookbook

./: CMakeLists.txt
Chapter2/01_GLFW/src/: main.cpp
Chapter2/02_GLM/src/: main.cpp
Chapter2/03_STB/src/: main.cpp
Chapter2/04_ImGui/src/: main.cpp
Chapter2/05_EasyProfiler/src/: main.cpp
Chapter2/07_Assimp/src/: main.cpp
Chapter2/08_ETC2Comp/src/: main.cpp
Chapter2/09_Taskflow/src/: main.cpp
Chapter2/10_MeshOptimizer/src/: main.cpp
Chapter3/GL01_APIWrapping/src/: main.cpp
Chapter3/GL02_VtxIdxPulling/: CMakeLists.txt
Chapter3/GL02_VtxIdxPulling/src/: main.cpp
Chapter3/GL03_CubeMap/src/: main.cpp
Chapter3/VK01_GLSLang/src/: main.cpp
Chapter3/VK02_DemoApp/src/: main.cpp
Chapter4/GL01_Camera/src/: main.cpp
Chapter4/VK01_DemoApp/src/: main.cpp
Chapter5/GL01_Grid/src/: main.cpp
Chapter5/GL02_Tessellation/src/: main.cpp
Chapter5/GL03_MeshRenderer/src/: main.cpp
Chapter5/MeshConvert/src/: main.cpp
Chapter5/VK01_MultiMeshDraw/src/: main.cpp
data/shaders/chapter03/: GL02Index.vert
shared/: Bitmap.h  Camera.h  Graph.h  UtilsCubemap.cpp  UtilsFPS.h  UtilsVulkan.cpp  UtilsVulkan.h
shared/glFramework/: GLFWApp.h  GLSceneData.cpp
shared/scene/: VtxData.cpp  VtxData.h
shared/vkFramework/: VulkanApp.cpp  VulkanApp.h
shared/vkRenderers/: VulkanCanvas.cpp  VulkanCanvas.h  VulkanCube.cpp  VulkanCube.h  VulkanImGui.cpp  VulkanImGui.h  VulkanModelRenderer.cpp  VulkanMultiMeshRenderer.cpp  VulkanMultiMeshRenderer.h  VulkanPBRModelRenderer.cpp  VulkanQuadRenderer.cpp  VulkanRendererBase.cpp  VulkanRendererBase.h
(+5 files in other folders)
